SERVER-19694 Distributed lock should retry on duplicate key error creating the lock entry